Bug 454687 - smb4k crash when trying to mount
Summary: smb4k crash when trying to mount
Status: RESOLVED FIXED
Alias: None
Product: Smb4k
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Alexander Reinholdt
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2022-06-01 08:16 UTC by mathieu.molinie
Modified: 2022-06-04 09:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mathieu.molinie 2022-06-01 08:16:57 UTC
Application: smb4k (3.1.2)

Qt Version: 5.15.4
Frameworks Version: 5.94.0
Operating System: Linux 5.17.9-arch1-1 x86_64
Windowing System: Wayland
Distribution: "Arch Linux"
DrKonqi: 5.24.5 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:

launch the application : smb4k try to mount automatically a share via a previously saved bookmark. But the mount is impossible due to being in a different subnet. Rather than just fail to mount the share, smb4k crash.

- Custom settings of the application:

bookmark to a share

The crash can be reproduced every time.

-- Backtrace:
Application: Smb4K (smb4k), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f5c84030684 in KMountPoint::mountType() const () from /usr/lib/libKF5KIOCore.so.5
#5  0x00007f5c85f6c50d in Smb4KShare::fileSystemString() const () from /usr/lib/libsmb4kcore.so
#6  0x000056040c7ed0cc in ?? ()
#7  0x000056040c7eda73 in ?? ()
#8  0x00007f5c8540da7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#9  0x00007f5c8541375a in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#10 0x00007f5c8493aff8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#11 0x00007f5c8540a0a5 in QApplication::event(QEvent*) () from /usr/lib/libQt5Widgets.so.5
#12 0x00007f5c8540da7c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQt5Widgets.so.5
#13 0x00007f5c8493aff8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#14 0x00007f5c84985003 in QTimerInfoList::activateTimers() () from /usr/lib/libQt5Core.so.5
#15 0x00007f5c84985642 in ?? () from /usr/lib/libQt5Core.so.5
#16 0x00007f5c82d7a163 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#17 0x00007f5c82dd09e9 in ?? () from /usr/lib/libglib-2.0.so.0
#18 0x00007f5c82d776c5 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#19 0x00007f5c849857bc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#20 0x00007f5c8493379c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#21 0x00007f5c8493e2a9 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#22 0x000056040c7d0f4f in ?? ()
#23 0x00007f5c84292290 in ?? () from /usr/lib/libc.so.6
#24 0x00007f5c8429234a in __libc_start_main () from /usr/lib/libc.so.6
#25 0x000056040c7d1d55 in _start ()
[Inferior 1 (process 170171) detached]

Possible duplicates by query: bug 430007, bug 423234, bug 421299, bug 419658, bug 417010.

Reported using DrKonqi
Comment 1 Alexander Reinholdt 2022-06-04 08:55:48 UTC
Git commit e09add242982336c513789d2196bc7d006620f93 by Alexander Reinholdt.
Committed on 04/06/2022 at 08:54.
Pushed by areinholdt into branch 'master'.

Fix a crash when the mount point is not available.

M  +4    -1    core/smb4kshare.cpp

https://invent.kde.org/network/smb4k/commit/e09add242982336c513789d2196bc7d006620f93
Comment 2 Alexander Reinholdt 2022-06-04 09:06:52 UTC
Git commit b8821ed967edc30a99d5fc024ca8a0b8351738c8 by Aexander Reinholdt.
Committed on 04/06/2022 at 09:05.
Pushed by areinholdt into branch '3.1'.

Fix a crash when the mount point is not available.

M  +4    -1    core/smb4kshare.cpp

https://invent.kde.org/network/smb4k/commit/b8821ed967edc30a99d5fc024ca8a0b8351738c8