Fix a crash when the mount point is not available.

BUG: 454687