core/smb4kshare.cpp
@@ -363,7 +363,10 @@ QString Smb4KShare::fileSystemString() const
   if (!path().isEmpty() && d->filesystem.isEmpty())
   {
     KMountPoint::Ptr mp = KMountPoint::currentMountPoints().findByPath(path());
-    d->filesystem = mp->mountType().toUpper();
+
+    if (mp) {
+      d->filesystem = mp->mountType().toUpper();
+    }
   }
   
   return d->filesystem;
